--- a/calc.html
+++ b/calc.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="calc.html">Calc</a></li>
-                <li><a target="_blank" href="Resources/resume.pdf">Resume</a></li>
+                <li><a target="_blank" href="Resources/resumeCopy.pdf">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
