--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,28 @@
     <title>Contact Page</title>
     <link rel="stylesheet" href="Byers.css">
     <link rel = "icon" href = "Images/IconHPU.png" type = "image/x-icon">
+
+<style>
+    input[type="text"], textarea {
+        width: 100%;
+        padding: 10px;
+        margin: 5px 0 20px 0;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+</style>
+
 </head>
 <body>
     <header>
