--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel = "shortcut icon" href = "Images/IconHPU.png" type = "image/x-icon">
+    <link rel = "shortcut icon" href = "Images/IconHPU.png?" type = "image/x-icon">
 </head>
 <body>
     <header>
