--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Page</title>
+    <title>Kolt Byers-Contact</title>
     <link rel="stylesheet" href="Byers.css">
     <link rel = "shortcut icon" href = "Images/IconHPU.png?" type = "image/x-icon">
 
