--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Kolt Byers</title>
+    <title>Kolt Byers-About</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel="icon" href="Images/IconHPU.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
 </head>
 <body>
     <header>
