--- a/contact.html
+++ b/contact.html
@@ -52,14 +52,11 @@
             <h2>Name:</h2>
             <p>Kolt Byers</p>
 
-            <h2>Email:</h2>
+            <h2>Personal Email:</h2>
             <a href="mailto:Kbyers@highpoint.edu">Kbyers@highpoint.edu</a>
 
-            <h2>Phone:</h2>
-            <p>(555) 555-5555</p>
-
-            <h2>Address:</h2>
-            <p>123 Main Street, New York City, New York, 12345</p>
+            <h2>School Email:</h2>
+            <a href="mailto:Kjbyers6@gmail.com">Kjbyers6@gmail.com</a>
         </div>
     </div>
 
