--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
             <h2>Name:</h2>
             <p>Kolt Byers</p>
 
-            <h2>Personal Email:</h2>
+            <h2>University Email:</h2>
             <a href="mailto:Kbyers@highpoint.edu">Kbyers@highpoint.edu</a>
 
-            <h2>School Email:</h2>
+            <h2>Personal Email:</h2>
             <a href="mailto:Kjbyers6@gmail.com">Kjbyers6@gmail.com</a>
         </div>
     </div>
