--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="Byers.css">
     <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <h1>Kolt Byers</h1>
@@ -29,7 +31,10 @@
                 <img src="Images/IMG_02592.PNG" alt="Profile Picture">
             </div>
 
-            <p>Hello, I'm Kolt Byers. I am a Division I student-athlete attending High Point University. I'm majoring in Computer Science. I participate on the track team here at High Point as a decathlete. This is why a part of my personal website is a men's decathlon calculator. This website was created as a project for my Web Technologies class my senior year!</p>
+            <p>Hello, I'm Kolt Byers. I am a Division I student-athlete attending High Point University. I'm majoring in
+                Computer Science. I participate on the track team here at High Point as a decathlete. This is why a part
+                of my personal website is a men's decathlon calculator. This website was created as a project for my Web
+                Technologies class my senior year!</p>
 
             <div class="about-section">
                 <h2>My Skills</h2>
@@ -79,5 +84,5 @@
         <p>&copy; Copyright 2024 Kolt Byers</p>
     </footer>
 </body>
-</html>
 
+</html>
