--- a/calc.html
+++ b/calc.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header>
-        <h1>Kolt Byers</h1>
+    
         <nav>
+            <img src="Images/Kolt-Byers-SignatureGenerator.png" alt="Logo" class="navbar-logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
