--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-    <header>
-        <h1>Kolt Byers</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="calc.html">Calc</a></li>
-                <li><a target="_blank" href="Resources/resumeCopy.pdf">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+
+
+    <nav>
+        <img src="Images/Kolt-Byers-SignatureGenerator.png" alt="Logo" class="navbar-logo">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="calc.html">Calc</a></li>
+            <li><a target="_blank" href="Resources/resumeCopy.pdf">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
 
     <div class="home">
         <h1>Welcome to My Personal Website</h1>
