--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <img src="Images/Kolt-Byers-SignatureGenerator.png" alt="Logo" class="navbar-logo">
+        <img src="Images/signature.png" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
