--- a/index.html
+++ b/index.html
@@ -9,38 +9,6 @@
     <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
 </head>
 
-<script>
-
-    // Function to check if an element is in the viewport
-    function isElementInViewport(el) {
-        const rect = el.getBoundingClientRect();
-        return (
-            rect.top >= 0 &&
-            rect.left >= 0 &&
-            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-            rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-        );
-    }
-
-    // Function to add the 'visible' class to elements in the viewport
-    function handleScroll() {
-        const sections = document.querySelectorAll('.fade-in-section');
-        sections.forEach((section) => {
-            if (isElementInViewport(section)) {
-                section.classList.add('visible');
-            }
-        });
-    }
-
-    // Listen for scroll events
-    window.addEventListener('scroll', handleScroll);
-
-    // Initial check in case some sections are already in the viewport
-    handleScroll();
-
-</script>
-
-
 <body>
     <nav>
         <img src="Images/signature.png" alt="Logo" class="navbar-logo">
@@ -73,6 +41,9 @@
             <img src="Images/IMG_0482.JPG" alt="Image 12">
         </div>
     </div>
+
+    <script src="scripts.js"></script>
+
     <footer>
         <p>&copy; Copyright 2024 Kolt Byers</p>
     </footer>
