--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             <h1>Welcome to My Personal Website</h1>
         </div>
         <div class="gallery">
-            <img src="Images/IMG_0368.JPG" alt="Image 1">
-            <img src="Images/IMG_0370.JPG" alt="Image 2">
-            <img src="Images/IMG_0371.JPG" alt="Image 3">
-            <img src="Images/IMG_0383.JPG" alt="Image 4">
+            <img src="Images/IMG_0368.png" alt="Image 1">
+            <img src="Images/IMG_0370.png" alt="Image 2">
+            <img src="Images/IMG_0371.png" alt="Image 3">
+            <img src="Images/IMG_0383.png" alt="Image 4">
             <img src="Images/IMG_0497.PNG" alt="Image 5">
-            <img src="Images/IMG_0424.JPG" alt="Image 6">
-            <img src="Images/IMG_0427.JPG" alt="Image 7">
-            <img src="Images/IMG_0487.JPG" alt="Image 8">
-            <img src="Images/IMG_0449.JPG" alt="Image 9">
-            <img src="Images/IMG_0461.JPG" alt="Image 10">
-            <img src="Images/IMG_0465.JPG" alt="Image 11">
-            <img src="Images/IMG_0482.JPG" alt="Image 12">
+            <img src="Images/IMG_0424.png" alt="Image 6">
+            <img src="Images/IMG_0427.png" alt="Image 7">
+            <img src="Images/IMG_0487.png" alt="Image 8">
+            <img src="Images/IMG_0449.png" alt="Image 9">
+            <img src="Images/IMG_0461.png" alt="Image 10">
+            <img src="Images/IMG_0465.png" alt="Image 11">
+            <img src="Images/IMG_0482.png" alt="Image 12">
         </div>
     </div>
     <script src="scripts.js"></script>
