--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolt Byers</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/IconHPU.webp" type="image/x-icon">
 </head>
 
 <body>
     <nav>
-        <img src="Images/signature.png" alt="Logo" class="navbar-logo">
+        <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -26,18 +26,18 @@
             <h1>Welcome to My Personal Website</h1>
         </div>
         <div class="gallery">
-            <img src="Images/IMG_0368.png" alt="Image 1">
-            <img src="Images/IMG_0370.png" alt="Image 2">
-            <img src="Images/IMG_0371.png" alt="Image 3">
-            <img src="Images/IMG_0383.png" alt="Image 4">
-            <img src="Images/IMG_0497.PNG" alt="Image 5">
-            <img src="Images/IMG_0424.png" alt="Image 6">
-            <img src="Images/IMG_0427.png" alt="Image 7">
-            <img src="Images/IMG_0487.png" alt="Image 8">
-            <img src="Images/IMG_0449.png" alt="Image 9">
-            <img src="Images/IMG_0461.png" alt="Image 10">
-            <img src="Images/IMG_0465.png" alt="Image 11">
-            <img src="Images/IMG_0482.png" alt="Image 12">
+            <img src="Images/IMG_0368.webp" alt="Image 1">
+            <img src="Images/IMG_0370.webp" alt="Image 2">
+            <img src="Images/IMG_0371.webp" alt="Image 3">
+            <img src="Images/IMG_0383.webp" alt="Image 4">
+            <img src="Images/IMG_0497.webp" alt="Image 5">
+            <img src="Images/IMG_0424.webp" alt="Image 6">
+            <img src="Images/IMG_0427.webp" alt="Image 7">
+            <img src="Images/IMG_0487.webp" alt="Image 8">
+            <img src="Images/IMG_0449.webp" alt="Image 9">
+            <img src="Images/IMG_0461.webp" alt="Image 10">
+            <img src="Images/IMG_0465.webp" alt="Image 11">
+            <img src="Images/IMG_0482.webp" alt="Image 12">
         </div>
     </div>
     <script src="scripts.js"></script>
