--- a/calc.html
+++ b/calc.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolt Byers-Decathalon Calculator</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/IconHPU.webp" type="image/x-icon">
 
 </head>
 
 <body>
     <nav>
-        <img src="Images/signature.png" alt="Logo" class="navbar-logo">
+        <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
