--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolt Byers-About</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/IconHPU.webp" type="image/x-icon">
 </head>
 
 <body>
     <nav>
-        <img src="Images/signature.png" alt="Logo" class="navbar-logo">
+        <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -26,7 +26,7 @@
             <h1>About Me</h1>
 
             <div class="profile-picture">
-                <img src="Images/IMG_02592.PNG" alt="Profile Picture">
+                <img src="Images/IMG_02592.webp" alt="Profile Picture">
             </div>
 
             <p>Hello, I'm Kolt Byers. I am a Division I student-athlete attending High Point University. I'm majoring in
