--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolt Byers-Contact</title>
     <link rel="stylesheet" href="Byers.css">
-    <link rel="shortcut icon" href="Images/IconHPU.png?" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/IconHPU.webp" type="image/x-icon">
 
     <style>
         input[type="text"],
@@ -36,7 +36,7 @@
 
 <body>
     <nav>
-        <img src="Images/signature.png" alt="Logo" class="navbar-logo">
+        <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
