--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar">
         <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
