--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,9 @@
     </nav>
     </header>
 
-    <header>
-        <h1>Contact Information</h1>
-    </header>
-
     <div class="container contact">
         <div class="contact-info">
+            <h1>Let's Chat!</h1>
             <h2>Name:</h2>
             <p>Kolt Byers</p>
 
