--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="home">
-        <h1>Welcome to My Personal Website</h1>
+        <h1>This is me.</h1>
     </div>
     <div class="gallery">
         <img src="Images/IMG_0368.webp" alt="Image 1">
