--- a/about.html
+++ b/about.html
@@ -21,59 +21,64 @@
         </ul>
     </nav>
 
-    <div class="container">
-        <div class="about">
-            <h1>About Me</h1>
+    <div class="fade-in-section">
+        <div class="container">
+            <div class="about">
+                <h1>About Me</h1>
 
-            <div class="profile-picture">
-                <img src="Images/IMG_02592.webp" alt="Profile Picture">
-            </div>
+                <div class="profile-picture">
+                    <img src="Images/IMG_02592.webp" alt="Profile Picture">
+                </div>
 
-            <p>Hello, I'm Kolt Byers. I am a Division I student-athlete attending High Point University. I'm majoring in
-                Computer Science. I participate on the track team here at High Point as a decathlete. This is why a part
-                of my personal website is a men's decathlon calculator. This website was created as a project for my Web
-                Technologies class my senior year!</p>
+                <p>Hello, I'm Kolt Byers. I am a Division I student-athlete attending High Point University. I'm
+                    majoring in
+                    Computer Science. I participate on the track team here at High Point as a decathlete. This is why a
+                    part
+                    of my personal website is a men's decathlon calculator. This website was created as a project for my
+                    Web
+                    Technologies class my senior year!</p>
 
-            <div class="about-section">
-                <h2>My Skills</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>C++</li>
-                    <li>JavaScript</li>
-                    <li>Python</li>
-                    <li>C</li>
-                </ul>
-            </div>
+                <div class="about-section"></br></br></br>
+                    <h2>My Skills</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>C++</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>C</li>
+                    </ul>
+                </div>
 
-            <div class="about-section">
-                <h2>My Interests</h2>
-                <ul>
-                    <li>Technology</li>
-                    <li>Athletics</li>
-                    <li>Travel</li>
-                    <li>Video Games</li>
-                </ul>
-            </div>
+                <div class="about-section"></br></br></br>
+                    <h2>My Interests</h2>
+                    <ul>
+                        <li>Technology</li>
+                        <li>Athletics</li>
+                        <li>Travel</li>
+                        <li>Video Games</li>
+                    </ul>
+                </div>
 
-            <div class="about-section">
-                <h2>Education</h2>
-                <p>Bachelor's Degree in Computer Science - High Point University, 2024</p>
-            </div>
+                <div class="about-section"></br></br></br>
+                    <h2>Education</h2>
+                    <p>Bachelor's Degree in Computer Science - High Point University, 2024</p>
+                </div>
 
-            <div class="about-section">
-                <h2>Experience</h2>
-                <p>Tour Guide - Back Country Safari Tours, Summer of 2024</p>
-                <p>Beach Set up Service - Corolla Beach Services, Summer of 2023</p>
-            </div>
+                <div class="about-section"></br></br></br>
+                    <h2>Experience</h2>
+                    <p>Tour Guide - Back Country Safari Tours, Summer of 2024</p>
+                    <p>Beach Set up Service - Corolla Beach Services, Summer of 2023</p>
+                </div>
 
-            <div class="about-section">
-                <h2>Awards</h2>
-                <ul>
-                    <li>Big South Conference Champion Heptathlon (2022-2023 Indoor Season)</li>
-                    <li>Big South Conference Runner Up in Pole Vault</li>
-                    <li>Big South Conference Team Champions (5x)</li>
-                    <li>2023 Indoor Men’s MVP</li>
-                </ul>
+                <div class="about-section"></br></br></br>
+                    <h2>Awards</h2>
+                    <ul>
+                        <li>Big South Conference Champion Heptathlon (2022-2023 Indoor Season)</li>
+                        <li>Big South Conference Runner Up in Pole Vault</li>
+                        <li>Big South Conference Team Champions (5x)</li>
+                        <li>2023 Indoor Men’s MVP</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
