--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <div class="fade-in-section">
+    <FadeInSection>
         <div class="container">
             <div class="about">
                 <h1>About Me</h1>
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </FadeInSection>
 
     <footer>
         <p>&copy; Copyright 2024 Kolt Byers</p>
