--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
     </div>
     </div>
 
-    <footer>
-        <p>&copy; Copyright 2024 Kolt Byers</p>
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="https://www.instagram.com/koltbyers/" target="_blank">
+                <img src="Images/InstagramLogo.webp" alt="Footer Image" class="Footer-image">
+            </a>
+            <p>&copy; Copyright 2024 Kolt Byers</p>
+        </div>
     </footer>
 </body>
 
