--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    
+    <script src="scripts.js"></script>
 
     <footer>
         <p>&copy; Copyright 2024 Kolt Byers</p>
