--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <footer class="footer">
         <div class="footer-content">
             <a href="https://www.instagram.com/koltbyers/" target="_blank">
-                <img src="Images/InstagramLogo.webp" alt="Footer Image" class="Footer-image">
+                <div class="Footer-image">
+                <img src="Images/InstagramLogo.webp" alt="Footer Image">
+                </div>
             </a>
             <p>&copy; Copyright 2024 Kolt Byers</p>
         </div>
