--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <a href="https://www.instagram.com/koltbyers/" target="_blank">
-                <div class="Footer-image">
-                <img src="Images/InstagramLogo.webp" alt="Footer Image">
-                </div>
-            </a>
             <p>&copy; Copyright 2024 Kolt Byers</p>
+            <a href="https://www.example.com" target="_blank" class="footer-link">
+                <img src="https://example.com/path-to-your-image.jpg" alt="Footer Image" class="footer-image">
+            </a>
         </div>
     </footer>
+
 </body>
 
 </html>
