holy shit I suck at this

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; Copyright 2024 Kolt Byers</p>
-            <a href="https://www.example.com" target="_blank" class="footer-link">
-                <img src="https://example.com/path-to-your-image.jpg" alt="Footer Image" class="footer-image">
+            <a href="https://www.instagram.com/koltbyers/" target="_blank" class="footer-link">
+                <img src="Images/InstagramLogo.webp" alt="Footer Image" class="footer-image">
             </a>
         </div>
     </footer>
