--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-content">
-            <p>&copy; Copyright 2024 Kolt Byers</p>
-            <a href="https://www.instagram.com/koltbyers/" target="_blank" class="footer-link">
-                <img src="Images/InstagramLogo.webp" alt="Footer Image" class="footer-image">
-            </a>
-        </div>
+        <p>&copy; Copyright 2024 Kolt Byers</p>
+        <a href="https://www.instagram/koltbyers/" target="_blank" class="footer-link">
+            <img src="Images/InstagramLogo.webp" alt="Footer Image" class="footer-image">
+        </a>
     </footer>
 
 </body>
