--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
     <footer class="footer">
         <p>&copy; Copyright 2024 Kolt Byers</p>
-        <a href="https://www.instagram/koltbyers/" target="_blank" class="footer-link">
+        <a href="https://www.instagram.com/koltbyers/" target="_blank" class="footer-link">
             <img src="Images/InstagramLogo.webp" alt="Footer Image" class="footer-image">
+        </a>
+        <a href="mailto:Kjbyers6@gmail.com" class="footer-link">
+            <img src="Images/emailLogo.png" alt="Footer Image" class="footer-image">
         </a>
     </footer>
 
