--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,9 @@
             <h2>University Email:</h2>
             <a href="mailto:Kbyers@highpoint.edu">Kbyers@highpoint.edu</a>
 
-            <h2>Personal Email:</h2>
+            <h2>Personal Email</h2>
             <a href="mailto:Kjbyers6@gmail.com">Kjbyers6@gmail.com</a>
+                        
         </div>
     </div>
 
