--- a/about.html
+++ b/about.html
@@ -81,9 +81,18 @@
 
     <script src="scripts.js"></script>
 
-    <footer>
+    <footer class="footer">
         <p>&copy; Copyright 2024 Kolt Byers</p>
+        <div class="footer-links">
+            <a href="https://www.instagram.com/koltbyers/" target="_blank" class="footer-link">
+                <img src="Images/InstagramLogo.webp" alt="Footer Image" class="footer-image">
+            </a>
+            <a href="mailto:Kjbyers6@gmail.com" class="footer-link">
+                <img src="Images/EmailLogo2.png" alt="Footer Image" class="footer-image">
+            </a>
+        </div>
     </footer>
+
 </body>
 
 </html>
