this should be dope

--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,18 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="calc.html">Calc</a></li>
-            <li><a target="_blank" href="Resources/resumeCopy.pdf">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div class = gradient>
+        <nav class="navbar">
+            <img src="Images/signature.webp" alt="Logo" class="navbar-logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="calc.html">Calc</a></li>
+                <li><a target="_blank" href="Resources/resumeCopy.pdf">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     </header>
 
     <div class="container contact">
